[project]
name = "evaluating-distributional-forecasts-talk"
version = "0.1.0"
description = "Code and notebooks for evaluating distributional forecasts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy",
    "aeon",
    "statsmodels",
    "pandas",
    "numpy",
    "matplotlib",
    "jupyter",
    "ipykernel",
    "tqdm",
]
